--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-05 Mon 16:19]
+#+CAPTION: Clock summary at [2016-12-05 Mon 17:26]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *23:21* |       |      | 100.0 |
+| *Total time*                                                                | *23:59* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 23:21   |       |      | 100.0 |
-| Active                                                                      |         | 23:21 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   7.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   4.4 |
+| Stories                                                                     | 23:59   |       |      | 100.0 |
+| Active                                                                      |         | 23:59 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   7.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   4.3 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.8 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   2.4 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   4.6 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   5.0 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  18.6 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   5.4 |
-| STARTED Clean up kernel and backend confusion                               |         |       | 5:00 |  21.4 |
-| STARTED Add a "language" directory for each backend                         |         |       | 0:37 |   2.6 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  24.7 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   2.3 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   2.3 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   4.4 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.9 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  18.1 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   5.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  22.0 |
+| STARTED Add a "language" directory for each backend                         |         |       | 0:58 |   4.0 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  24.0 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   2.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -169,7 +169,9 @@ At present you can try to build the codegen knitting targets even
 before you built knitter. We should make them conditional on detecting
 =knitter=. We just need to make sure this is not cached by CMake.
 
-*** STARTED Clean up kernel and backend confusion                     :story:
+*** COMPLETED Clean up kernel and backend confusion                   :story:
+    CLOSED: [2016-12-05 Mon 16:38]
+    CLOCK: [2016-12-05 Mon 16:21]--[2016-12-05 Mon 16:38] =>  0:17
     CLOCK: [2016-12-05 Mon 15:30]--[2016-12-05 Mon 16:20] =>  0:50
     CLOCK: [2016-12-05 Mon 13:34]--[2016-12-05 Mon 14:01] =>  0:42
     CLOCK: [2016-12-05 Mon 11:09]--[2016-12-05 Mon 12:30] =>  1:21
@@ -209,6 +211,8 @@ interrelated. However, we've moved out any work which is not strictly
 required and done all the required work in one go.
 
 *** STARTED Add a "language" directory for each backend               :story:
+    CLOCK: [2016-12-05 Mon 17:10]--[2016-12-05 Mon 17:26] =>  0:16
+    CLOCK: [2016-12-05 Mon 16:38]--[2016-12-05 Mon 16:43] =>  0:05
     CLOCK: [2016-12-04 Sun 19:37]--[2016-12-04 Sun 19:40] =>  0:03
     CLOCK: [2016-12-04 Sun 18:53]--[2016-12-04 Sun 19:27] =>  0:34
 
@@ -281,6 +285,22 @@ fields. This is because we need different defaults depending on the
 facet etc. A different approach would be to use the appropriate
 template (without default values) and then using profiles to default
 those that need defaulting.
+
+Other fields may also need a similar clean up:
+
+- overwrite
+
+In addition, we could add support for "default value variables". These
+are useful for directories. They work as follows: the default value is
+something like =${facet.simple_name}= or perhaps just
+=${simple_name}=, in which case we assume the template kind determines
+the target. Say the target is the kernel:
+
+:      "family": "quilt",
+:      "kernel": "quilt.cpp",
+
+The simple name is then =kernel - family=, e.g. =cpp=. Unfortunately
+this does not work for prefix.
 
 Tasks:
 
