--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-05 Mon 18:08]
+#+CAPTION: Clock summary at [2016-12-05 Mon 20:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *24:40* |       |      | 100.0 |
+| *Total time*                                                                | *25:16* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 24:40   |       |      | 100.0 |
-| Active                                                                      |         | 24:40 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   7.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   4.2 |
+| Stories                                                                     | 25:16   |       |      | 100.0 |
+| Active                                                                      |         | 25:16 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   7.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   4.1 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.7 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   2.2 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   4.3 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.7 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  17.6 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   5.1 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  21.4 |
-| STARTED Add a "language" directory for each backend                         |         |       | 1:39 |   6.7 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  23.4 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   2.2 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   4.2 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.6 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  17.2 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.9 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  20.9 |
+| STARTED Add a "language" directory for each backend                         |         |       | 2:15 |   8.9 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  22.8 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   2.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -211,6 +211,8 @@ interrelated. However, we've moved out any work which is not strictly
 required and done all the required work in one go.
 
 *** STARTED Add a "language" directory for each backend               :story:
+    CLOCK: [2016-12-05 Mon 20:17]--[2016-12-05 Mon 20:38] =>  0:21
+    CLOCK: [2016-12-05 Mon 20:01]--[2016-12-05 Mon 20:16] =>  0:15
     CLOCK: [2016-12-05 Mon 17:27]--[2016-12-05 Mon 18:08] =>  0:41
     CLOCK: [2016-12-05 Mon 17:10]--[2016-12-05 Mon 17:26] =>  0:16
     CLOCK: [2016-12-05 Mon 16:38]--[2016-12-05 Mon 16:43] =>  0:05
