--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,25 +12,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-06 Tue 09:51]
+#+CAPTION: Clock summary at [2016-12-06 Tue 10:22]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *27:24* |       |      | 100.0 |
+| *Total time*                                                                | *27:55* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 27:24   |       |      | 100.0 |
-| Active                                                                      |         | 27:24 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.8 |
+| Stories                                                                     | 27:55   |       |      | 100.0 |
+| Active                                                                      |         | 27:55 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.7 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.7 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   2.0 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.9 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.3 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  15.8 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.6 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  19.3 |
-| STARTED Add a "language" directory for each backend                         |         |       | 4:23 |  16.0 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  21.0 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.8 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.2 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  15.5 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.5 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  18.9 |
+| STARTED Add a "language" directory for each backend                         |         |       | 4:54 |  17.6 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  20.7 |
 | STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -211,6 +211,7 @@ interrelated. However, we've moved out any work which is not strictly
 required and done all the required work in one go.
 
 *** STARTED Add a "language" directory for each backend               :story:
+    CLOCK: [2016-12-06 Tue 09:51]--[2016-12-06 Tue 10:22] =>  0:31
     CLOCK: [2016-12-06 Tue 09:02]--[2016-12-06 Tue 09:50] =>  0:48
     CLOCK: [2016-12-05 Mon 21:54]--[2016-12-05 Mon 22:01] =>  0:07
     CLOCK: [2016-12-05 Mon 21:30]--[2016-12-05 Mon 21:53] =>  0:23
