--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,25 +12,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-06 Tue 10:22]
+#+CAPTION: Clock summary at [2016-12-06 Tue 10:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *27:55* |       |      | 100.0 |
+| *Total time*                                                                | *28:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 27:55   |       |      | 100.0 |
-| Active                                                                      |         | 27:55 |      | 100.0 |
+| Stories                                                                     | 28:06   |       |      | 100.0 |
+| Active                                                                      |         | 28:06 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.7 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.7 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   2.0 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.8 |
 | COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.2 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  15.5 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.5 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  18.9 |
-| STARTED Add a "language" directory for each backend                         |         |       | 4:54 |  17.6 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  20.7 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  15.4 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.4 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  18.8 |
+| STARTED Add a "language" directory for each backend                         |         |       | 5:05 |  18.1 |
+| STARTED Add support for C#                                                  |         |       | 5:46 |  20.5 |
 | STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -211,6 +211,7 @@ interrelated. However, we've moved out any work which is not strictly
 required and done all the required work in one go.
 
 *** STARTED Add a "language" directory for each backend               :story:
+    CLOCK: [2016-12-06 Tue 10:23]--[2016-12-06 Tue 10:34] =>  0:11
     CLOCK: [2016-12-06 Tue 09:51]--[2016-12-06 Tue 10:22] =>  0:31
     CLOCK: [2016-12-06 Tue 09:02]--[2016-12-06 Tue 09:50] =>  0:48
     CLOCK: [2016-12-05 Mon 21:54]--[2016-12-05 Mon 22:01] =>  0:07
@@ -280,6 +281,8 @@ Tasks:
   thing.
 - set =quilt.csharp.enabled= to false on all test models to start off
   with, and update them as we start adding C# support.
+
+: +#DOGEN quilt.enable_kernel_directories=true
 
 *** STARTED Add support for C#                                        :story:
     CLOCK: [2016-12-04 Sun 18:45]--[2016-12-04 Sun 18:52] =>  0:07
