--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,26 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-06 Tue 11:15]
+#+CAPTION: Clock summary at [2016-12-06 Tue 12:19]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *28:45* |       |      | 100.0 |
+| *Total time*                                                                | *29:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 28:45   |       |      | 100.0 |
-| Active                                                                      |         | 28:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.6 |
+| Stories                                                                     | 29:49   |       |      | 100.0 |
+| Active                                                                      |         | 29:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.5 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.6 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   1.9 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.7 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   4.1 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  15.1 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.3 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  18.4 |
-| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  19.9 |
-| STARTED Add support for C#                                                  |         |       | 5:46 |  20.1 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.9 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   1.8 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.6 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   3.9 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  14.5 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  17.7 |
+| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  19.2 |
+| STARTED Add support for C#                                                  |         |       | 6:50 |  22.9 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -288,6 +288,8 @@ Tasks:
 : +#DOGEN quilt.enable_kernel_directories=true
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-06 Tue 11:24]--[2016-12-06 Tue 12:20] =>  0:56
+    CLOCK: [2016-12-06 Tue 11:16]--[2016-12-06 Tue 11:24] =>  0:08
     CLOCK: [2016-12-04 Sun 18:45]--[2016-12-04 Sun 18:52] =>  0:07
     CLOCK: [2016-12-04 Sun 18:29]--[2016-12-04 Sun 18:33] =>  0:04
     CLOCK: [2016-12-02 Fri 13:10]--[2016-12-02 Fri 13:28] =>  0:18
@@ -301,6 +303,13 @@ Tasks:
     CLOCK: [2016-11-30 Wed 13:37]--[2016-11-30 Wed 15:00] =>  1:23
 
 Create a quilt model for C#.
+
+Notes:
+
+- at present the formatters are all using wale templates for C++. This
+  won't work. Create either new wale templates for C# or maybe to
+  start off with just hand craft the formatters until we can see a
+  pattern emerging.
 
 Tasks:
 
