--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,26 +12,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-06 Tue 12:19]
+#+CAPTION: Clock summary at [2016-12-06 Tue 16:03]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *29:49* |       |      | 100.0 |
+| *Total time*                                                                | *31:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 29:49   |       |      | 100.0 |
-| Active                                                                      |         | 29:49 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.5 |
+| Stories                                                                     | 31:00   |       |      | 100.0 |
+| Active                                                                      |         | 31:00 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   6.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.3 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.6 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   1.8 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.6 |
-| COMPLETED Move project directory to output options                          |         |       | 1:10 |   3.9 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  14.5 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.2 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  17.7 |
-| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  19.2 |
-| STARTED Add support for C#                                                  |         |       | 6:50 |  22.9 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.8 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.4 |
+| COMPLETED Move project directory to output options                          |         |       | 1:10 |   3.8 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  14.0 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   4.0 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  17.0 |
+| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  18.5 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       | 1:11 |   3.8 |
+| STARTED Add support for C#                                                  |         |       | 6:50 |  22.0 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -286,6 +287,37 @@ Tasks:
   with, and update them as we start adding C# support.
 
 : +#DOGEN quilt.enable_kernel_directories=true
+
+*** COMPLETED Split C++ profiles and templates from C#                :story:
+    CLOSED: [2016-12-06 Tue 16:03]
+    CLOCK: [2016-12-06 Tue 15:52]--[2016-12-06 Tue 16:03] =>  0:11
+    CLOCK: [2016-12-06 Tue 15:38]--[2016-12-06 Tue 15:51] =>  0:13
+    CLOCK: [2016-12-06 Tue 14:01]--[2016-12-06 Tue 14:48] =>  0:47
+
+When we did =quilt.cpp= there was an implicit assumption that C++ and
+C# would share formatters, profiles, etc. Hence they were named:
+
+: artefact formatter
+: helper formatter
+
+And so forth. Same with the wale templates. However:
+
+- the formatter interfaces for C# are different - simpler, so it makes
+  no sense to add the C++ complexity;
+- by implication, the wale templates will also be different too;
+- so the profiles must be different as well.
+
+However, these names are quite clear so we need to preserve some of
+that clarity. Options:
+
+: cpp artefact formatter
+: cpp helper formatter
+
+: artefact formatter (cpp)
+: helper formatter (cpp)
+
+: c++ artefact formatter
+: c++ helper formatter
 
 *** STARTED Add support for C#                                        :story:
     CLOCK: [2016-12-06 Tue 11:24]--[2016-12-06 Tue 12:20] =>  0:56
